google search head tag added

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -112,4 +112,5 @@
   {% unless site.theme_mode %}
     {% include mode-toggle.html %}
   {% endunless %}
+  <meta name="google-site-verification" content="MuI8vAf7Vomx5Rurq22cNsZ99Kdb85wLZSyGhnKxiyE" />
 </head>
